# cmake_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  unit_test.sh
main/: CMakeLists.txt  main.cpp
sub/: CMakeLists.txt  sub.cpp  sub.h
sub2/: CMakeLists.txt
sub2/include/: sub2.h
sub2/src/: sub2.cpp
test/: CMakeLists.txt  main.cpp  sub_test.cpp  sub_toString.cpp  test.cpp
